--- a/index.html
+++ b/index.html
@@ -3,8 +3,16 @@
     <head>
         <meta charset="utf-8">
         <title></title>
+        <link rel="stylesheet" href="estilo.css">
     </head>
     <body>
+<header>
 
+</header>
+<div>
+    <aside></aside>
+    <main></main>
+    <aside></aside>
+</div>
     </body>
 </html>
