--- a/cursos.html
+++ b/cursos.html
@@ -9,8 +9,8 @@
 <header>
 <nav>
     <div></a>Imagem</div>
-    <div><b>home</b></div>
-    <div><a href="cursos.html"></a><b>cursos</b></div>
+    <div><a href="index.html"></a>home</div>
+    <div>cursos</div>
     <div><a href="sobre.html"></a><b>sobre</b></div>
 </nav>
 </header>
