--- a/sobre.html
+++ b/sobre.html
@@ -9,9 +9,9 @@
 <header>
 <nav>
     <div></a>Imagem</div>
-    <div><b>home</b></div>
-    <div><a href="cursos.html"></a><b>cursos</b></div>
-    <div><a href="sobre.html"></a><b>sobre</b></div>
+    <div><a href="index.html"></a>home</div>
+    <div><a href="indexcursos.html"></a>cursos</div>
+    <div><b>sobre</b></div>
 </nav>
 </header>
 <div>
