Tarefa ID4: Parte 4 Completa

--- a/cursos.html
+++ b/cursos.html
@@ -11,12 +11,12 @@
     <div></a>Imagem</div>
     <div><a href="index.html"></a>home</div>
     <div>cursos</div>
-    <div><a href="sobre.html"></a><b>sobre</b></div>
+    <div><a href="sobre.html"><b>sobre</b></a></div>
 </nav>
 </header>
 <div>
     <aside></aside>
-    <main></main>
+    <main>Sobre</main>
     <aside></aside>
 </div>
     </body>
