--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <nav>
     <div></a>Imagem</div>
     <div><b>home</b></div>
-    <div><a href="cursos.html"></a><b>cursos</b></div>
-    <div><a href="sobre.html"></a><b>sobre</b></div>
+    <div><a href="cursos.html"><b>cursos</b></a></div>
+    <div><a href="sobre.html"><b>sobre</b></a></div>
 </nav>
 </header>
 <div>
     <aside></aside>
-    <main></main>
+    <main>Sobre</main>
     <aside></aside>
 </div>
     </body>
